--- a/res/xml/main_widget_info.xml
+++ b/res/xml/main_widget_info.xml
@@ -4,6 +4,7 @@
     android:initialLayout="@layout/main_widget"
     android:minHeight="40dp"
     android:minWidth="250dp"
+    android:resizeMode="horizontal"
     android:previewImage="@drawable/ic_launcher"
     android:updatePeriodMillis="0"
     android:widgetCategory="home_screen|keyguard" />
