--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -15,6 +15,7 @@
         <!--
              All customizations that are NOT specific to a particular API-level 
 			can go here.        -->
+        <!-- <item name="android:soundEffectsEnabled">false</item> -->
     </style>
     
     <style name="TransparentDialog" parent="@android:style/Theme.Dialog">
