--- a/res/layout/activity_browser.xml
+++ b/res/layout/activity_browser.xml
@@ -98,8 +98,7 @@
             android:layout_height="wrap_content"
             android:ellipsize="start"
             android:maxLines="3"
-            android:padding="2dp"
-            android:textAppearance="@style/MediumText" />
+            android:padding="2dp" />
 
         <br.com.carlosrafaelgn.fplay.ui.BgListView
             android:id="@+id/list"
@@ -129,14 +128,14 @@
             android:indeterminate="true" />
 
         <TextView
+            android:id="@+id/lblLoading"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:gravity="center"
             android:padding="2dp"
             android:singleLine="true"
-            android:text="@string/loading"
-            android:textAppearance="@style/LargeText" />
+            android:text="@string/loading" />
     </LinearLayout>
 
 </merge>
