--- a/res/layout/activity_main_control.xml
+++ b/res/layout/activity_main_control.xml
@@ -70,8 +70,7 @@
         android:nextFocusRight="@+id/btnPrev"
         android:nextFocusUp="@+id/btnMenu"
         android:padding="2dp"
-        android:text="@string/nothing_playing"
-        android:textAppearance="@style/LargeText" />
+        android:text="@string/nothing_playing" />
 
     <LinearLayout
         android:layout_width="match_parent"
