--- a/res/values-v11/styles.xml
+++ b/res/values-v11/styles.xml
@@ -1,8 +1,9 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <resources>
 
     <!--
-        Base application theme for API 11+. This theme completely replaces
-        AppBaseTheme from res/values/styles.xml on API 11+ devices.
+         Base application theme for API 11+. This theme completely replaces 
+		AppBaseTheme from res/values/styles.xml on API 11+ devices.
     -->
     <style name="AppBaseTheme" parent="@android:style/Theme.Holo.NoActionBar.Fullscreen">
         <!-- API 11 theme customizations can go here. -->
