--- a/res/values-v14/styles.xml
+++ b/res/values-v14/styles.xml
@@ -1,9 +1,10 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <resources>
 
     <!--
-        Base application theme for API 14+. This theme completely replaces
-        AppBaseTheme from BOTH res/values/styles.xml and
-        res/values-v11/styles.xml on API 14+ devices.
+         Base application theme for API 14+. This theme completely replaces 
+		AppBaseTheme from BOTH res/values/styles.xml and res/values-v11/styles.xml 
+		on API 14+ devices.
     -->
     <style name="AppBaseTheme" parent="@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen">
         <!-- API 14 theme customizations can go here. -->
