--- a/res/layout/activity_main_control_l.xml
+++ b/res/layout/activity_main_control_l.xml
@@ -28,8 +28,9 @@
             android:id="@+id/btnVolume"
             android:layout_width="100dp"
             android:layout_height="match_parent"
-            android:layout_toRightOf="@+id/btnDecreaseVolume" />
-        
+            android:layout_toRightOf="@+id/btnDecreaseVolume"
+            android:contentDescription="@string/volume" />
+
         <br.com.carlosrafaelgn.fplay.ui.BgButton
             android:id="@+id/btnIncreaseVolume"
             android:layout_width="100dp"
