--- a/res/layout/notification.xml
+++ b/res/layout/notification.xml
@@ -72,8 +72,7 @@
         android:layout_marginBottom="2dp"
         android:layout_marginTop="2dp"
         android:layout_toRightOf="@+id/imgIcon"
-        android:ellipsize="marquee"
-        android:fadingEdge="horizontal"
+        android:ellipsize="end"
         android:gravity="center"
         android:singleLine="true"
         android:textAppearance="@android:style/TextAppearance.StatusBar.EventContent" />
