--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -27,9 +27,14 @@
         <item name="android:windowNoTitle">true</item>
     </style>
 
+    <style name="SmallText" parent="@android:style/TextAppearance.Medium">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/color_text</item>
+    </style>
+
     <style name="MediumText" parent="@android:style/TextAppearance.Medium">
         <item name="android:textSize">18sp</item>
         <item name="android:textColor">@color/color_text</item>
     </style>
-
+    
 </resources>
