--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -80,7 +80,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="16dp"
-            android:contentDescription="@string/play_pause"
+            android:contentDescription="@string/play"
             android:nextFocusDown="@+id/barVolume"
             android:nextFocusForward="@+id/btnNext"
             android:nextFocusLeft="@+id/btnPrev"
