--- a/res/layout/main_widget.xml
+++ b/res/layout/main_widget.xml
@@ -65,7 +65,7 @@
             android:layout_alignParentTop="true"
             android:layout_toLeftOf="@+id/btnNext"
             android:background="@drawable/bg_widget_button"
-            android:contentDescription="@string/play_pause"
+            android:contentDescription="@string/play"
             android:focusable="true"
             android:nextFocusForward="@+id/btnNext"
             android:nextFocusLeft="@+id/btnPrev"
